--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,15 @@ dependencies {
     // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-layout-template-json
     implementation group: 'org.apache.logging.log4j', name: 'log4j-layout-template-json', version: '2.24.3'
 
+    // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-slf4j2-impl
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j2-impl', version: '2.24.3'
+
+    // https://mvnrepository.com/artifact/io.javalin/javalin
+    implementation group: 'io.javalin', name: 'javalin', version: '6.4.0'
+
+    // https://mvnrepository.com/artifact/com.google.code.gson/gson
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.11.0'
+
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
